--- a/ゼミ診断公開用.ipynb
+++ b/ゼミ診断公開用.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "def radar(sheet_name, index):\n",
     "    # データ読み込み\n",
     "    zemidf = pd.read_excel('./data.xlsx', sheet_name='data', index_col=0)\n",
-    "    studentdf = pd.read_excel('./data.xlsx', sheet_name='student_data')\n",
+    "    studentdf = pd.read_excel('./data.xlsx', sheet_name='data')\n",
     "    ratiodf = pd.read_excel('./data.xlsx', sheet_name=sheet_name)\n",
     "\n",
     "    student_name = studentdf.loc[index, 'student']\n",
@@ -22,7 +22,7 @@
     "    total_scores = []\n",
     "    zemi_values =[]\n",
     "\n",
-    "    # スコア計算\n",
+    "    # **スコア計算**\n",
     "    for i in zemidf.index:\n",
     "\n",
     "        total_score = 0\n",
@@ -42,7 +42,7 @@
     "\n",
     "        for _, row in ratiodf.iterrows():\n",
     "            question = row[\"question\"]\n",
-    "            ratio = row[\"ratio-10\"]\n",
+    "            ratio = row[\"ratio\"]\n",
     "\n",
     "            student_answer = answer[question]\n",
     "            zemi_value = zemidf.loc[i, question]\n",
@@ -65,7 +65,7 @@
     "        total_scores.append(total_score)\n",
     "\n",
     "        \n",
-    "    # スコア正規化\n",
+    "    # **スコア正規化**\n",
     "    scores = np.array(total_scores)\n",
     "    zemis = np.array(zemi_values)\n",
     "\n",
@@ -86,7 +86,7 @@
     "        normalized_scores = scores\n",
     "\n",
     "\n",
-    "    # 完全一致なら100点\n",
+    "    # **完全一致なら100点*\n",
     "    for idx, (i, row) in enumerate(zemidf.iterrows()):\n",
     "        all_match = all(\n",
     "            question in answer and str(answer[question]) != \"\" and str(answer[question]) == str(row[question])\n",
@@ -100,18 +100,12 @@
     "    # スコアを保存\n",
     "    zemidf[\"normalized_score\"] = normalized_scores\n",
     "\n",
-    "    # 上位10件を表示\n",
-    "    top3 = zemidf.sort_values('normalized_score', ascending=False)\n",
+    "    # 上位3件を表示\n",
+    "    top10 = zemidf.sort_values('normalized_score', ascending=False)\n",
     "    columns_to_display = [\"score\", \"normalized_score\"]\n",
-    "    display(top3.loc[top3.index[:10], columns_to_display])"
+    "    display(top10.loc[top10.index[:10], columns_to_display])\n",
+    "    print(student_name, student_preference, answer_count)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
